fix bug with signup image not showing

--- a/assets/css/syle.css
+++ b/assets/css/syle.css
@@ -217,9 +217,10 @@ footer{
 }
 /* Form */
 
-.form-section {
+.form-section{
     clear: left;
     background: url('../images/formbg.jpeg');
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: 900px;
